# pytest-pattern

./: LICENSE  README.md  TODO.md  dev-requirements.txt  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
src/pytest_pattern/: __init__.py
tests/: test_pytest_pattern.py
