[metadata]
name = pytest-pattern
version = 0.0
description = Plugin for pytest to add fuzzy string matching.
long_description = file: README.md
long_description_content_type = text/markdown
author = Calvin Giles
author_email = calvin.giles@springload.co.nz
url = https://github.com/springload/pytest-pattern
;project_urls =
license = MIT
keywords = pytest, string, fuzzy, regex, re, pattern
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    importlib-metadata >= 3.6.0 ; python_version < "3.10"
    pytest
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
;pytest11 =
;    pattern = pytest_pattern

[coverage:run]
branch = True
parallel = True
source =
    pytest_pattern
    tests

[coverage:paths]
source =
   src
   .tox/*/site-packages

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
